--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@kontent-ai/model-generator": "^8.1.2",
     "@kontent-ai/rich-text-resolver": "^2.0.3",
     "@stitches/react": "^1.2.8",
+    "clsx": "^2.1.1",
     "fuse.js": "^7.1.0",
+    "isomorphic-dompurify": "^2.25.0",
     "next": "^15.3.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
